save and back to dashboard

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -7,8 +7,7 @@
       <button
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
-        *ngIf="!dfaApplicationMainDataService.isSubmitted"
-        (click)="submitFile()"
+        (click)="saveAndBackToDashboard()"
         mat-stroked-button
         type="button"
         >
