--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -22,7 +22,7 @@
               <div class="row radio-extra-label">
                 {{ profileAddress?.addressLine1}}<br/>
                 <div *ngIf="profileAddress?.addressLine2">{{ profileAddress?.addressLine2}}<br/></div>
-                {{ profileAddress?.community }}&nbsp;{{ profileAddress?.postalCode }}<br /><br/>
+                {{ profileAddress?.city }}&nbsp;{{profileAddress?.stateProvince}}&nbsp;{{ profileAddress?.postalCode }}<br /><br/>
               </div>
               <mat-radio-button value=false>No</mat-radio-button>
               <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('isPrimaryAndDamagedAddressSame').value != 'true'">
