--- a/dfa/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
@@ -14,7 +14,7 @@
         <mat-card *ngIf="showFileUpload">
           <div class="row" [hidden]="!(missingRequiredFile === 'yes' || requiredFile === 'no')">
             <div class="col-md-6">
-              <b>{{title}}<span style="color:red;" *ngIf="requiredFile">*</span></b><br/>
+              <b>{{title}}<span style="color:red;" *ngIf="requiredFile === 'yes'">*</span></b><br/>
               <div [innerHTML]="description" (click)="onToggleSideNote()"></div>
               <app-file-upload
                 [noOfAttachments]="1"
