--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -23,7 +23,7 @@
             
             <div style="border-bottom: 1px solid lightgrey;padding-bottom:20px;">
               <span>Event ID</span><br />
-              <span style="font-size: 20px;"><b>{{applItem.eventId}}</b></span>
+              <span style="font-size: 20px;"><b>{{applItem.eventId == null ? "To Be Assigned" : applItem.eventId }}</b></span>
             </div>
            <div class="row" style="padding-top: 20px;">
              <div class="col-md-3">
@@ -36,7 +36,7 @@
               </div>
              <div class="col-md-3">
                 <span><b>Case Number</b></span><br />
-                <span>{{applItem.caseNumber}}</span>
+                <span>{{applItem.caseNumber == null ? "To Be Assigned" : applItem.caseNumber }}</span>
               </div>
              <div class="col-md-3">
                 <span><b>Date of Damage</b></span><br />
@@ -47,7 +47,7 @@
                <button
                       class="application-button"
                       type="button"
-                       (click)="ViewApplication(applItem.applicationId)"
+                       (click)="ViewApplication(applItem.applicationId, applItem.primaryApplicantSignedDate)"
                     >
                       View Application
                 </button>
