--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -220,10 +220,10 @@
     <mat-error *ngIf="insuranceTemplateForm.hasError('noInsuranceTemplate')">
       <br/>Insurance template is required.
     </mat-error>
-    <mat-error *ngIf="rentalAgreementForm.hasError('noRentalAgreement') && isResidentialTenant">
+    <mat-error *ngIf="rentalAgreementForm?.hasError('noRentalAgreement') && isResidentialTenant">
       <br/>Proof of tenancy is required.
     </mat-error>
-    <mat-error *ngIf="identificationForm.hasError('noIdentification') && isResidentialTenant">
+    <mat-error *ngIf="identificationForm?.hasError('noIdentification') && isResidentialTenant">
       <br/>Identification is required.
     </mat-error>
 
