--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -194,7 +194,7 @@ footer nav {
 }
 
 .button-p:disabled {
-  background-color: #234075;
+  background-color: #EFEFEF;
   color: #ffffff !important;
 }
 
