--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-start/dfa-application-start.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-start/dfa-application-start.component.html
@@ -56,6 +56,7 @@
           >
             {{ step.nextButtonLabel }}
           </button>
+          <button (click)="showForm()">Show Form</button>
         </div>
       </div>
     </mat-step>
