EMBCDFA-844 bug fix

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -1216,8 +1216,8 @@
               (formCreationService.propertyDamageForm$ | async)?.value
                 .wereYouEvacuated === 'true' ?
                 ((formCreationService.propertyDamageForm$ | async)?.value
-                .dateReturned ? ('Yes, returned ' + (formCreationService.propertyDamageForm$ | async)?.value
-                .dateReturned) : 'Yes')
+                .dateReturned | date: "MM/dd/yyyy" ? ('Yes, returned ' + ((formCreationService.propertyDamageForm$ | async)?.value
+                .dateReturned | date: "MM/dd/yyyy")) : 'Yes')
                 : 'No'
             }}
           </div>
