--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -160,7 +160,7 @@
             class="button-p save-button"
             mat-stroked-button
             type="button"
-            (click)="submitFile()"
+            (click)="setFormData('sign-and-submit');submitFile()"
           >
             Submit
           </button>
