--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -195,7 +195,7 @@ footer nav {
 
 .button-p:disabled {
   background-color: #EFEFEF;
-  color: #ffffff !important;
+  color: #3a3a3a !important;
 }
 
 button {
