--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
@@ -25,7 +25,7 @@
             addressFormControl?.addressLine1.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -47,7 +47,7 @@
             addressFormControl?.addressLine2.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -78,7 +78,7 @@
             addressFormControl?.community.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -110,7 +110,7 @@
             addressFormControl?.postalCode.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -152,7 +152,7 @@
             addressFormControl?.stateProvince.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
         <!--<mat-error *ngIf="validateProvince()"> Province is invalid</mat-error>-->
       </mat-form-field>
