--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -25,7 +25,7 @@
             addressFormControl?.addressLine1.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -57,7 +57,7 @@
             addressFormControl?.addressLine2.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -101,7 +101,7 @@
             addressFormControl?.community.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -124,7 +124,7 @@
             addressFormControl?.stateProvince.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
@@ -158,7 +158,7 @@
             addressFormControl?.postalCode.hasError('maxLength')
           "
         >
-          Maximum length reached</mat-error
+          Maximum length of 100 characters reached</mat-error
         >
       </mat-form-field>
     </div>
